# datachat

./: .env.example  .gitignore  README.md  pyproject.toml
src/datachat/: client.py  demo_tool_use.py
src/datachat/tools/: compute_correlation.py  describe.py  plot_chart.py  query.py
tests/: test_correlation.py  test_describe.py  test_query.py
